--- a/src/shared/Navigation/Dropdown.css
+++ b/src/shared/Navigation/Dropdown.css
@@ -1,36 +1,38 @@
-.dropdown {
-    position: absolute;
-    top: 3.2rem;
-    left: 0px;
+ .dropdown {
+  position: absolute;
+    top: 3.1rem;
+    left: 0;
     width: 180px;
     padding: 0px;
     border-radius: 5px;
     display: none;
-
-}
-/*dropdown link border. Excluding last element*/
-.dropdown :not(:last-child) {
-    border-bottom: 1px solid white;
-}
+} 
 
 .dropdown-link {
-    color: white;
+     color: white;
     display: block;
-    font-size: 1.1rem;
+    font-size: 0.8rem;
     text-decoration: none;
     text-align: center;
-    padding: 10px;
+    border-top: 1px solid white ;
     background-color: #333333;
 }
 .dropdown .nav-item {
     width: 100%;
+    padding: 0;
 }
+
+
 
 .dropdown-link:hover {
     background-color: #4CAF50;
     transition: 0.3s;
     text-decoration: none;
     color: #fff;
+}
+
+.nav-item:hover .dropdown {
+    display: block;
 }
 
 .dropdown :last-child a{
@@ -40,26 +42,46 @@
 .chevron {
     font-size: 0.8rem;
     margin-left: 4px;
+} 
+/*this class is for removing blue highlighting of the element*/
+/*also changes a cursor to a pointer*/
+.noSelect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
 }
 
-@media only screen and (max-width: 1080px){
+.noSelect:hover {
+    border:none;
+}
+
+@media only screen and (max-width: 1220px){
     .dropdown {
         position: static;
-        display:block;
-        width: 100%;
-        text-align: justify;
-        max-height: 0px;
+        width: inherit;
         display: none;
     }
     .dropdown-link {
-        text-align: justify;
+        text-align: left;
+        text-indent: 20px;
         padding-left:50px;
+        width: inherit;
+        border-bottom: 1px solid white;
     }
     .dropdown-link:hover,  .dropdown-link.active {
-        background-color: #313131;
-        border-bottom: 1px solid white;
+        background-color: #333333;
+        border-bottom: none;
     }
     .dropdown {
-        border-bottom: 1px solid white;
+        display: block;
+        border-bottom: none;
     }
+
+    .dropdown :last-child a{
+    border-radius: 0;
+}
 }
