--- a/src/shared/Navigation/NavItem.css
+++ b/src/shared/Navigation/NavItem.css
@@ -1,73 +1,61 @@
 .nav-item-list {
-    list-style-type: none;
-    float: left;
-    height: inherit;
-    margin: 0 10px;
-    padding: 0px;
-    display: block;
+    text-transform: uppercase;
+    color: white;
+    width: 100%;
 }
 
 .nav-item-link {
-    color: white;
-    display: block;
-    font-size: 1.1rem;
-    text-decoration: none;
-    text-align: center;
-    padding: 0.7rem 1.5rem;
-    margin: 0 0 0 20px;
+   color: white;
+   padding: 11px 25px;
+   
 }
 
 .nav-item {
     display: inline-block;
-    height: inherit;
-    position: relative;  
+    padding: 13px  2px;
+    position: relative;
 }
+
+.nav-item a{
+    padding: 11px 25px;
+    margin: 0;
+}
+
 
 .nav-item-link:hover, .nav-item-link.active  {
     color: white;
     text-decoration: none;
-    border-bottom: 3px solid #4CAF50;
+    border-bottom: 5px solid #4CAF50;
 }
 
-/* .active {
-    color: white;
-    text-decoration: none;
-    border-bottom: 3px solid #4CAF50;
-} */
 
-.nav-item:hover .dropdown {
-    display: block;
-}
-
-@media only screen and (max-width: 1080px){
+@media only screen and (max-width: 1220px){
     .nav-item-list {
-        width: 100%;
-        margin: 0;
-        display: static;
         max-height: 0px;
-        overflow: hidden;
+        width: 100%;
+        padding:0;
     }
     .showing {
         max-height: 100%;
-        overflow: visible;
+        display: none;
     }
     .nav-item {
         background-color: #333333;
         width: 100%;
-        margin: 0px;
+        padding: 0;
     }
 
     .nav-item-link {
         width: 100%;
-        margin: 0px;
-        padding: 0.7rem 1.5rem;
-        text-align: justify;
+        display: inline-block;
+        border-top: 1px solid white;
     }  
 
     .nav-item-link:hover, .nav-item-link.active {
     color: white;
     text-decoration: none;
-    border-bottom: 3px solid #ffffff;
+    /* border-top: 1px solid white; */
+    border-bottom:none;
     }
     
 }
