--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
- body {
+
+
+ html, body {
   margin: 0;
   padding: 0;
   min-height: 100%;
-  min-width: 100%;
   height: 100%;
   box-sizing: border-box;
 }
-
-
