--- a/src/shared/Navigation/NavItem.css
+++ b/src/shared/Navigation/NavItem.css
@@ -28,6 +28,10 @@
     border-bottom: 5px solid #4CAF50;
 }
 
+.underlined {
+    border-bottom: 5px solid #4CAF50;
+}
+
 
 @media only screen and (max-width: 1220px){
     .nav-item-list {
