--- a/src/shared/Navigation/NavItem.css
+++ b/src/shared/Navigation/NavItem.css
@@ -38,10 +38,11 @@
         max-height: 0px;
         width: 100%;
         padding:0;
+        overflow: hidden;
     }
     .showing {
         max-height: 100%;
-        display: none;
+        overflow: visible;
     }
     .nav-item {
         background-color: #333333;
@@ -61,5 +62,9 @@
     /* border-top: 1px solid white; */
     border-bottom:none;
     }
+
+    .underlined {
+    border-bottom: none;
+}
     
 }
