Positioned content container. Added Section components to HomePage.

--- a/src/home/page/HomePage.css
+++ b/src/home/page/HomePage.css
@@ -1,9 +1,5 @@
 .header-image {
     width: 100%;
-    height: 750px;
+    height: 100%;
 }
 
-.highlights-container {
-    height: 1500px;
-    background-color: teal;
-}
