--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
  html, body {
   margin: 0;
   padding: 0;
-  min-height: 100%;
-  height: 100%;
+  min-height: auto;
+  height: auto;
   box-sizing: border-box;
 }
