--- a/src/shared/Navigation/NavBar.css
+++ b/src/shared/Navigation/NavBar.css
@@ -7,14 +7,6 @@
     top: 11rem;
 }
 
-.fixed {
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-    top:5.5rem;
-    transition: top 0.5s;
-}
-
 .logo {
     color: white;
     margin: 0.7rem;
@@ -31,6 +23,7 @@
 
 .upper-nav-container {
     position: fixed;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,11 +32,19 @@
     width: 100%;
 }
 
-.smaller {
+.upper-nav-container-smaller {
     position: fixed;
     top: 0;
     height: 5.5rem;
     transition: height 0.5s;
+}
+
+.nav-bar-fixed {
+    /* position: fixed; */
+    width: 100%;
+    z-index: 10;
+    top:5.5rem;
+    transition: top 0.5s;
 }
 
 .zoomed {
@@ -77,6 +78,7 @@
         float: left;
         margin: 1px 10px;
     }
+    
 }
 /*tablet size*/
 @media only screen and (max-width: 780px){
@@ -94,8 +96,8 @@
     }
    
     .upper-nav-container {
-    position: static;
-    height: 5.5rem;
+        position: static;
+        height: 5.5rem;
     }
 
 }
