--- a/src/shared/Navigation/Dropdown.css
+++ b/src/shared/Navigation/Dropdown.css
@@ -6,6 +6,7 @@
     padding: 0px;
     border-radius: 5px;
     display: none;
+    z-index: 20;
 } 
 
 .dropdown-link {
@@ -16,10 +17,14 @@
     text-align: center;
     border-top: 1px solid white ;
     background-color: #333333;
+    /* position: relative;
+    z-index: 20; */
 }
 .dropdown .nav-item {
     width: 100%;
     padding: 0;
+    /* position: relative;
+    z-index: 20; */
 }
 
 
