--- a/src/home/components/BannerBottomContainer.css
+++ b/src/home/components/BannerBottomContainer.css
@@ -8,3 +8,32 @@
     /* background-color: lightcoral; */
 
 }
+
+@media only screen and (max-width: 1360px) {
+    .banner-bottom-container {
+        width: 860px;
+        height: 360px;
+    }
+}
+
+@media only screen and (max-width: 1150px) {
+    .banner-bottom-container {
+        width: 90%;
+        height: 280px;
+    }
+}
+/* tablet size*/
+@media only screen and (max-width: 780px) {
+    .banner-bottom-container {
+        bottom:5.5rem;
+        width: 98%;
+    }
+}
+
+/* mobile size*/
+@media only screen and (max-width: 550px) {
+    .banner-bottom-container {
+        width: 100%;
+        height: 200px;
+    }
+}
