--- a/src/home/components/HighLightsSection.css
+++ b/src/home/components/HighLightsSection.css
@@ -1,6 +1,7 @@
 .highlights-section {
+    position: relative;
     min-width: 100%;
-    min-height: 400px;
-    background-color: rgb(57, 60, 63);
-    
+    min-height: auto;
+    background-color: rgb(156, 157, 158);
+    z-index: 1;
 }
