--- a/src/shared/Navigation/NavItem.css
+++ b/src/shared/Navigation/NavItem.css
@@ -2,11 +2,13 @@
     text-transform: uppercase;
     color: white;
     width: 100%;
+    z-index: 10;
 }
 
 .nav-item-link {
    color: white;
    padding: 11px 25px;
+   z-index: 10;
 }
 
 .nav-item {
