--- a/src/home/components/TestimonialsSection.css
+++ b/src/home/components/TestimonialsSection.css
@@ -1,5 +1,12 @@
 .testimonials-section {
     min-width: 100%;
     min-height: 400px;
-    background-color: lightslategray;
+    background-color: white;
 }
+
+.testimonial-carousel-indicator {
+    border-radius: 100%;
+    height: 30px !important;
+    background-color: #4CAF50 !important;
+}
+
