--- a/src/home/page/HomePage.css
+++ b/src/home/page/HomePage.css
@@ -14,3 +14,27 @@
     margin: 0;
     padding-top: 50px;
 }
+
+
+@media screen and (max-width: 1140px) {
+    .section-title {
+        font-size: 4rem;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .section-title {
+        font-size: 3rem;
+    }
+}
+
+
+@media screen and (max-width: 550px) {
+    .section-title {
+        font-size: 2rem;
+        padding-top: 10px;
+    }
+}
+
+
