--- a/src/shared/Footer/Footer.css
+++ b/src/shared/Footer/Footer.css
@@ -2,15 +2,53 @@
     text-align: center;
     background-color: #333333;
     width: 100%;
-    height: 4.2rem;
+    height: 20rem;
 }
 
 .copyright {
     color: white;
-    font-size: small;
+    font-size: 1rem;
     margin: 0;
 }
 
+.follow-us-text {
+    font-family: 'Lora', serif;
+  font-weight: bolder;
+    font-size: 4rem;
+    color: rgb(176, 182, 154);
+}
+
 .icons {
-    padding: 10px 10px 5px;
+    /* padding: 10px 10px 5px; */
+    margin: 0 10px 30px;
+}
+
+.developed-by {
+    font-size: 0.8rem;
+    margin: 20px 0 0;
+    color: whitesmoke;
+}
+
+
+/*media queries*/
+@media screen and (max-width: 365px) {
+    .footer {
+    height: 17rem;
+}
+
+.copyright {
+    font-size: 0.8rem;
+}
+
+.follow-us-text {
+    font-size: 3rem;
+}
+
+.icons {
+    font-size: xx-large;
+}
+
+.developed-by {
+    font-size: 0.7rem;
+}
 }
